fix: icons and "Sort By" div overlapping (#913)

--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -152,3 +152,7 @@
   bottom: 32px;
   left: 100%;
 }
+
+.marketplace-content {
+  margin-top: 60px;
+}
